--- a/styles/style.css
+++ b/styles/style.css
@@ -4,18 +4,15 @@
   box-sizing: border-box;
 }
 
-html {
-  block-size: 100%;
+input:focus,
+input:focus-visible,
+input:focus-within {
+  outline: none !important;
 }
 
-.page {
-  inline-size: 1200px;
-  block-size: 100%;
-  margin: auto;
-  color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
-  font-size: 18px;
-  background-color: #1b1919;
+ul,
+ol {
+  list-style: none;
 }
 
 h1,
@@ -32,9 +29,281 @@ fieldset {
   padding: 0;
 }
 
-ul,
-ol {
-  list-style: none;
+html {
+  block-size: 100%;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  inline-size: 1200px;
+  block-size: 100%;
+  margin: auto;
+  color: #fff;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  background-color: #1b1919;
+}
+
+.content {
+  display: flex;
+  align-items: flex-end;
+  gap: 30px;
+  width: 1140px;
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.content__list-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-top: 25px;
+  gap: 30px;
+  height: 298px;
+  overflow: auto;
+}
+
+.content__video-card {
+  display: flex;
+  align-items: flex-start;
+}
+
+.content__video-card-thumbnail {
+  object-fit: fill;
+  object-position: center;
+  height: 103px;
+  min-width: 194px;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+
+.content__video-card-title {
+  line-height: 40px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 30px;
+  text-transform: uppercase;
+  font-family: Oswald;
+  font-weight: 700;
+}
+
+.title {
+  line-height: 70px;
+  text-transform: uppercase;
+  font-family: Oswald;
+  font-size: 75px;
+  font-weight: 700;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__card-link {
+  display: block;
+  color: white;
+  text-decoration: none;
+}
+
+.content__video-card-description {
+  display: -webkit-inline-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  line-clamp: 4;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-family: "Fira Sans Condensed";
+  font-weight: 400;
+}
+
+.content__details {
+  flex: 1;
+  height: 100%;
+  max-width: 399px;
+  width: 100%;
+}
+
+.result__video-container {
+  position: relative;
+  height: 386px;
+  width: 711px;
+  margin-bottom: 16px;
+}
+
+.search-form__fieldset-title {
+  font-family: "Fira Sans Condensed";
+  font-weight: 400;
+  margin-bottom: 5px;
+  font-size: 18px;
+}
+
+.search-form__fieldset {
+  border: none;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+
+.search-form__textfield {
+  min-width: 225px;
+  color: #fff;
+  appearance: none;
+  font-family: "Fira Sans Condensed";
+  font-weight: 400;
+  font-size: 18px;
+  outline: none;
+  background: transparent;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+  border-left: transparent;
+  border-right: transparent;
+}
+
+.content__list {
+  width: 100%;
+  flex-direction: column;
+  display: flex;
+  gap: 30px;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+}
+
+.search-form__label {
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  gap: 5px;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid white;
+  outline-offset: 1px;
+}
+
+.search-form__pseudo-checkbox {
+  height: 19px;
+  width: 19px;
+  padding: 1px;
+  border: 1px solid white;
+}
+
+.search-form__pseudo-checkbox::after {
+  content: "";
+  display: block;
+  background-color: white;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  opacity: 1;
+}
+
+.search-form__label:hover {
+  cursor: pointer;
+}
+
+.search-form__checkbox-list .search-form__label:hover .search-form__label-text {
+  text-decoration: 1px underline;
+  text-underline-offset: 5px;
+}
+
+.button {
+  cursor: pointer;
+  background-color: transparent;
+  border: 1px solid white;
+  font-family: "Fira Sans Condensed";
+  font-size: 18px;
+  font-weight: 700;
+  color: white;
+}
+
+.button:hover {
+  text-decoration: 1px underline;
+}
+
+.button:active {
+  background-color: #545050;
+}
+
+.button:focus-visible {
+  outline: 1px solid white;
+  outline-offset: 2px;
+}
+
+.search-form__submit-button {
+  align-self: flex-end;
+  padding: 6px 73.5px;
+}
+
+.more-button {
+  padding: 6px 138px;
+  margin: 0px 7px 3px 2px;
+}
+
+.content__card-link_current {
+  background-color: #545050;
+}
+
+.content__card-link:active {
+  background-color: #545050;
+}
+
+.content__list-item {
+  padding: 0px 3px 0px 3px;
+}
+
+.content__list-item:hover .content__video-card-title {
+  text-decoration: 2px underline;
+  text-underline-offset: 6px;
+}
+
+.content__list-item:hover .content__video-card-description {
+  text-decoration: 1px underline;
+  text-underline-offset: 3px;
+}
+
+.content__list-item:focus {
+  outline: none;
+}
+
+.content__list-item:focus-visible {
+  outline: 1px solid white;
+  outline-offset: 0px;
+}
+
+.search-form__textfield::placeholder {
+  color: rgb(255 255 255 / 0.7);
 }
 
 /* Кастомный скроллбар */
@@ -47,5 +316,5 @@ ol {
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #D9D9D9;
+  background-color: #d9d9d9;
 }
