--- a/styles/style.css
+++ b/styles/style.css
@@ -4,12 +4,6 @@
   box-sizing: border-box;
 }
 
-input:focus,
-input:focus-visible,
-input:focus-within {
-  outline: none !important;
-}
-
 ul,
 ol {
   list-style: none;
@@ -106,14 +100,14 @@ html {
   text-overflow: ellipsis;
   font-size: 30px;
   text-transform: uppercase;
-  font-family: Oswald;
+  font-family: Oswald, sans-serif;
   font-weight: 700;
 }
 
 .title {
   line-height: 70px;
   text-transform: uppercase;
-  font-family: Oswald;
+  font-family: Oswald, sans-serif;
   font-size: 75px;
   font-weight: 700;
 }
@@ -135,7 +129,7 @@ html {
   line-clamp: 4;
   overflow: hidden;
   text-overflow: ellipsis;
-  font-family: "Fira Sans Condensed";
+  font-family: inherit, sans-serif;
   font-weight: 400;
 }
 
@@ -154,7 +148,7 @@ html {
 }
 
 .search-form__fieldset-title {
-  font-family: "Fira Sans Condensed";
+  font-family: inherit, sans-serif;
   font-weight: 400;
   margin-bottom: 5px;
   font-size: 18px;
@@ -174,7 +168,7 @@ html {
   min-width: 225px;
   color: #fff;
   appearance: none;
-  font-family: "Fira Sans Condensed";
+  font-family: inherit, sans-serif;
   font-weight: 400;
   font-size: 18px;
   outline: none;
@@ -242,7 +236,7 @@ html {
   cursor: pointer;
   background-color: transparent;
   border: 1px solid white;
-  font-family: "Fira Sans Condensed";
+  font-family: inherit, sans-serif;
   font-size: 18px;
   font-weight: 700;
   color: white;
@@ -263,7 +257,8 @@ html {
 
 .search-form__submit-button {
   align-self: flex-end;
-  padding: 6px 73.5px;
+  min-inline-size: 194px;
+  min-block-size: 34px;
 }
 
 .more-button {
